asg4-symbols-types/yyparse.output
Terminals unused in grammar

   TOK_ROOT
   TOK_BLOCK
   TOK_CALL
   ROOT
   NUMBER
   IDENT
   TOK_TYPE_ID
   TOK_FUNCTION
   TOK_INDEX
   TOK_PARAM
   '.'
   '!'


State 19 conflicts: 2 shift/reduce
State 20 conflicts: 1 shift/reduce, 1 reduce/reduce
State 58 conflicts: 15 shift/reduce
State 67 conflicts: 1 shift/reduce
State 68 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce
State 114 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 121 conflicts: 1 shift/reduce
State 122 conflicts: 1 shift/reduce
State 123 conflicts: 1 shift/reduce
State 124 conflicts: 1 shift/reduce
State 125 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 127 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 166 conflicts: 1 reduce/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program structdef
    3        | program function
    4        | program statement
    5        | program error '}'
    6        | program error ';'
    7        | %empty

    8 structdef: TOK_STRUCT TOK_IDENT '{' typeident '}' ';'
    9          | TOK_STRUCT TOK_IDENT '{' typeident '}'

   10 typeident: type TOK_IDENT ';' typeident
   11          | type TOK_IDENT ';'
   12          | %empty

   13 type: plaintype
   14     | TOK_ARRAY TOK_LT plaintype TOK_GT

   15 plaintype: TOK_VOID
   16          | TOK_INT
   17          | TOK_STRING
   18          | TOK_BOOL
   19          | TOK_REF
   20          | TOK_CHAR
   21          | TOK_IDENT
   22          | TOK_PTR TOK_LT TOK_STRUCT TOK_IDENT TOK_GT
   23          | TOK_PTR TOK_LT TOK_IDENT TOK_GT

   24 function: type TOK_IDENT '(' funcident ')' block
   25         | type '[' ']' TOK_IDENT '(' funcident ')' block

   26 funcident: %empty
   27          | funcident type TOK_IDENT
   28          | funcident type '[' ']' TOK_IDENT
   29          | funcident ',' type TOK_IDENT
   30          | funcident ',' type '[' ']' TOK_IDENT

   31 block: optstmt '}'
   32      | optstmt '}' ';'
   33      | '{' '}'
   34      | ';'

   35 optstmt: optstmt statement
   36        | '{' statement

   37 statement: vardecl
   38          | block
   39          | while
   40          | ifelse
   41          | return
   42          | expr ';'

   43 vardecl: type TOK_IDENT ';'
   44        | type TOK_IDENT '=' expr ';'
   45        | type '[' ']' TOK_IDENT '=' expr ';'
   46        | TOK_IDENT '[' expr ']' '=' expr ';'

   47 while: TOK_WHILE '(' expr ')' statement

   48 ifelse: TOK_IF '(' expr ')' statement
   49       | TOK_IF '(' expr ')' statement dangling

   50 dangling: TOK_ELSE statement

   51 return: TOK_RETURN ';'
   52       | TOK_RETURN expr ';'

   53 expr: expr '=' expr
   54     | expr '+' expr
   55     | expr '-' expr
   56     | expr '*' expr
   57     | expr '/' expr
   58     | expr '^' expr
   59     | expr '%' expr
   60     | expr TOK_GT expr
   61     | expr TOK_GE expr
   62     | expr TOK_LT expr
   63     | expr TOK_LE expr
   64     | expr TOK_EQ expr
   65     | expr TOK_NE expr
   66     | '+' expr
   67     | '-' expr
   68     | allocator
   69     | call
   70     | '(' expr ')'
   71     | TOK_NOT expr
   72     | TOK_NEW type '[' expr ']'
   73     | variable
   74     | constant

   75 allocator: TOK_ALLOC TOK_LT TOK_STRING TOK_GT '(' expr ')'
   76          | TOK_ALLOC TOK_LT TOK_STRUCT TOK_IDENT TOK_GT '(' ')'
   77          | TOK_ALLOC TOK_LT TOK_ARRAY TOK_LT plaintype TOK_GT TOK_GT '(' expr ')'

   78 call: callexpr ')'
   79     | TOK_IDENT '(' ')'

   80 callexpr: TOK_IDENT '(' expr
   81         | callexpr ',' expr

   82 variable: TOK_IDENT
   83         | expr '[' expr ']'
   84         | expr TOK_ARROW TOK_IDENT

   85 constant: TOK_INTCON
   86         | TOK_CHARCON
   87         | TOK_STRINGCON
   88         | TOK_NOT
   89         | TOK_NULLPTR


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'%' (37) 59
'(' (40) 24 25 47 48 49 70 75 76 77 79 80
')' (41) 24 25 47 48 49 70 75 76 77 78 79
'*' (42) 56
'+' (43) 54 66
',' (44) 29 30 81
'-' (45) 55 67
'.' (46)
'/' (47) 57
';' (59) 6 8 10 11 32 34 42 43 44 45 46 51 52
'=' (61) 44 45 46 53
'[' (91) 25 28 30 45 46 72 83
']' (93) 25 28 30 45 46 72 83
'^' (94) 58
'{' (123) 8 9 33 36
'}' (125) 5 8 9 31 32 33
error (256) 5 6
TOK_VOID (258) 15
TOK_INT (259) 16
TOK_STRING (260) 17 75
TOK_BOOL (261) 18
TOK_REF (262) 19
TOK_CHAR (263) 20
TOK_IF (264) 48 49
TOK_ELSE (265) 50
TOK_WHILE (266) 47
TOK_RETURN (267) 51 52
TOK_STRUCT (268) 8 9 22 76
TOK_NULLPTR (269) 89
TOK_ARRAY (270) 14 77
TOK_ARROW (271) 84
TOK_ALLOC (272) 75 76 77
TOK_PTR (273) 22 23
TOK_EQ (274) 64
TOK_NE (275) 65
TOK_LT (276) 14 22 23 62 75 76 77
TOK_LE (277) 63
TOK_GT (278) 14 22 23 60 75 76 77
TOK_GE (279) 61
TOK_NOT (280) 71 88
TOK_IDENT (281) 8 9 10 11 21 22 23 24 25 27 28 29 30 43 44 45 46 76
    79 80 82 84
TOK_INTCON (282) 85
TOK_CHARCON (283) 86
TOK_STRINGCON (284) 87
TOK_ROOT (285)
TOK_BLOCK (286)
TOK_CALL (287)
TOK_NEW (288) 72
ROOT (289)
NUMBER (290)
IDENT (291)
TOK_TYPE_ID (292)
TOK_FUNCTION (293)
TOK_INDEX (294)
TOK_PARAM (295)
POS (296)
NEG (297)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
start (61)
    on left: 1, on right: 0
program (62)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4 5 6
structdef (63)
    on left: 8 9, on right: 2
typeident (64)
    on left: 10 11 12, on right: 8 9 10
type (65)
    on left: 13 14, on right: 10 11 24 25 27 28 29 30 43 44 45 72
plaintype (66)
    on left: 15 16 17 18 19 20 21 22 23, on right: 13 14 77
function (67)
    on left: 24 25, on right: 3
funcident (68)
    on left: 26 27 28 29 30, on right: 24 25 27 28 29 30
block (69)
    on left: 31 32 33 34, on right: 24 25 38
optstmt (70)
    on left: 35 36, on right: 31 32 35
statement (71)
    on left: 37 38 39 40 41 42, on right: 4 35 36 47 48 49 50
vardecl (72)
    on left: 43 44 45 46, on right: 37
while (73)
    on left: 47, on right: 39
ifelse (74)
    on left: 48 49, on right: 40
dangling (75)
    on left: 50, on right: 49
return (76)
    on left: 51 52, on right: 41
expr (77)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74, on right: 42 44 45 46 47 48 49 52 53 54 55 56 57 58
    59 60 61 62 63 64 65 66 67 70 71 72 75 77 80 81 83 84
allocator (78)
    on left: 75 76 77, on right: 68
call (79)
    on left: 78 79, on right: 69
callexpr (80)
    on left: 80 81, on right: 78 81
variable (81)
    on left: 82 83 84, on right: 73
constant (82)
    on left: 85 86 87 88 89, on right: 74


State 0

    0 $accept: . start $end

    $default  reduce using rule 7 (program)

    start    go to state 1
    program  go to state 2


State 1

    0 $accept: start . $end

    $end  shift, and go to state 3


State 2

    1 start: program .
    2 program: program . structdef
    3        | program . function
    4        | program . statement
    5        | program . error '}'
    6        | program . error ';'

    error          shift, and go to state 4
    TOK_VOID       shift, and go to state 5
    TOK_INT        shift, and go to state 6
    TOK_STRING     shift, and go to state 7
    TOK_BOOL       shift, and go to state 8
    TOK_REF        shift, and go to state 9
    TOK_CHAR       shift, and go to state 10
    TOK_IF         shift, and go to state 11
    TOK_WHILE      shift, and go to state 12
    TOK_RETURN     shift, and go to state 13
    TOK_STRUCT     shift, and go to state 14
    TOK_NULLPTR    shift, and go to state 15
    TOK_ARRAY      shift, and go to state 16
    TOK_ALLOC      shift, and go to state 17
    TOK_PTR        shift, and go to state 18
    TOK_NOT        shift, and go to state 19
    TOK_IDENT      shift, and go to state 20
    TOK_INTCON     shift, and go to state 21
    TOK_CHARCON    shift, and go to state 22
    TOK_STRINGCON  shift, and go to state 23
    TOK_NEW        shift, and go to state 24
    '('            shift, and go to state 25
    '{'            shift, and go to state 26
    ';'            shift, and go to state 27
    '+'            shift, and go to state 28
    '-'            shift, and go to state 29

    $end  reduce using rule 1 (start)

    structdef  go to state 30
    type       go to state 31
    plaintype  go to state 32
    function   go to state 33
    block      go to state 34
    optstmt    go to state 35
    statement  go to state 36
    vardecl    go to state 37
    while      go to state 38
    ifelse     go to state 39
    return     go to state 40
    expr       go to state 41
    allocator  go to state 42
    call       go to state 43
    callexpr   go to state 44
    variable   go to state 45
    constant   go to state 46


State 3

    0 $accept: start $end .

    $default  accept


State 4

    5 program: program error . '}'
    6        | program error . ';'

    '}'  shift, and go to state 47
    ';'  shift, and go to state 48


State 5

   15 plaintype: TOK_VOID .

    $default  reduce using rule 15 (plaintype)


State 6

   16 plaintype: TOK_INT .

    $default  reduce using rule 16 (plaintype)


State 7

   17 plaintype: TOK_STRING .

    $default  reduce using rule 17 (plaintype)


State 8

   18 plaintype: TOK_BOOL .

    $default  reduce using rule 18 (plaintype)


State 9

   19 plaintype: TOK_REF .

    $default  reduce using rule 19 (plaintype)


State 10

   20 plaintype: TOK_CHAR .

    $default  reduce using rule 20 (plaintype)


State 11

   48 ifelse: TOK_IF . '(' expr ')' statement
   49       | TOK_IF . '(' expr ')' statement dangling

    '('  shift, and go to state 49


State 12

   47 while: TOK_WHILE . '(' expr ')' statement

    '('  shift, and go to state 50


State 13

   51 return: TOK_RETURN . ';'
   52       | TOK_RETURN . expr ';'

    TOK_NULLPTR    shift, and go to state 15
    TOK_ALLOC      shift, and go to state 17
    TOK_NOT        shift, and go to state 19
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 21
    TOK_CHARCON    shift, and go to state 22
    TOK_STRINGCON  shift, and go to state 23
    TOK_NEW        shift, and go to state 24
    '('            shift, and go to state 25
    ';'            shift, and go to state 52
    '+'            shift, and go to state 28
    '-'            shift, and go to state 29

    expr       go to state 53
    allocator  go to state 42
    call       go to state 43
    callexpr   go to state 44
    variable   go to state 45
    constant   go to state 46


State 14

    8 structdef: TOK_STRUCT . TOK_IDENT '{' typeident '}' ';'
    9          | TOK_STRUCT . TOK_IDENT '{' typeident '}'

    TOK_IDENT  shift, and go to state 54


State 15

   89 constant: TOK_NULLPTR .

    $default  reduce using rule 89 (constant)


State 16

   14 type: TOK_ARRAY . TOK_LT plaintype TOK_GT

    TOK_LT  shift, and go to state 55


State 17

   75 allocator: TOK_ALLOC . TOK_LT TOK_STRING TOK_GT '(' expr ')'
   76          | TOK_ALLOC . TOK_LT TOK_STRUCT TOK_IDENT TOK_GT '(' ')'
   77          | TOK_ALLOC . TOK_LT TOK_ARRAY TOK_LT plaintype TOK_GT TOK_GT '(' expr ')'

    TOK_LT  shift, and go to state 56


State 18

   22 plaintype: TOK_PTR . TOK_LT TOK_STRUCT TOK_IDENT TOK_GT
   23          | TOK_PTR . TOK_LT TOK_IDENT TOK_GT

    TOK_LT  shift, and go to state 57


State 19

   71 expr: TOK_NOT . expr
   88 constant: TOK_NOT .

    TOK_NULLPTR    shift, and go to state 15
    TOK_ALLOC      shift, and go to state 17
    TOK_NOT        shift, and go to state 19
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 21
    TOK_CHARCON    shift, and go to state 22
    TOK_STRINGCON  shift, and go to state 23
    TOK_NEW        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 28
    '-'            shift, and go to state 29

    '+'       [reduce using rule 88 (constant)]
    '-'       [reduce using rule 88 (constant)]
    $default  reduce using rule 88 (constant)

    expr       go to state 58
    allocator  go to state 42
    call       go to state 43
    callexpr   go to state 44
    variable   go to state 45
    constant   go to state 46


State 20

   21 plaintype: TOK_IDENT .
   46 vardecl: TOK_IDENT . '[' expr ']' '=' expr ';'
   79 call: TOK_IDENT . '(' ')'
   80 callexpr: TOK_IDENT . '(' expr
   82 variable: TOK_IDENT .

    '('  shift, and go to state 59
    '['  shift, and go to state 60

    TOK_IDENT  reduce using rule 21 (plaintype)
    '['        [reduce using rule 21 (plaintype)]
    '['        [reduce using rule 82 (variable)]
    $default   reduce using rule 82 (variable)


State 21

   85 constant: TOK_INTCON .

    $default  reduce using rule 85 (constant)


State 22

   86 constant: TOK_CHARCON .

    $default  reduce using rule 86 (constant)


State 23

   87 constant: TOK_STRINGCON .

    $default  reduce using rule 87 (constant)


State 24

   72 expr: TOK_NEW . type '[' expr ']'

    TOK_VOID    shift, and go to state 5
    TOK_INT     shift, and go to state 6
    TOK_STRING  shift, and go to state 7
    TOK_BOOL    shift, and go to state 8
    TOK_REF     shift, and go to state 9
    TOK_CHAR    shift, and go to state 10
    TOK_ARRAY   shift, and go to state 16
    TOK_PTR     shift, and go to state 18
    TOK_IDENT   shift, and go to state 61

    type       go to state 62
    plaintype  go to state 32


State 25

   70 expr: '(' . expr ')'

    TOK_NULLPTR    shift, and go to state 15
    TOK_ALLOC      shift, and go to state 17
    TOK_NOT        shift, and go to state 19
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 21
    TOK_CHARCON    shift, and go to state 22
    TOK_STRINGCON  shift, and go to state 23
    TOK_NEW        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 28
    '-'            shift, and go to state 29

    expr       go to state 63
    allocator  go to state 42
    call       go to state 43
    callexpr   go to state 44
    variable   go to state 45
    constant   go to state 46


State 26

   33 block: '{' . '}'
   36 optstmt: '{' . statement

    TOK_VOID       shift, and go to state 5
    TOK_INT        shift, and go to state 6
    TOK_STRING     shift, and go to state 7
    TOK_BOOL       shift, and go to state 8
    TOK_REF        shift, and go to state 9
    TOK_CHAR       shift, and go to state 10
    TOK_IF         shift, and go to state 11
    TOK_WHILE      shift, and go to state 12
    TOK_RETURN     shift, and go to state 13
    TOK_NULLPTR    shift, and go to state 15
    TOK_ARRAY      shift, and go to state 16
    TOK_ALLOC      shift, and go to state 17
    TOK_PTR        shift, and go to state 18
    TOK_NOT        shift, and go to state 19
    TOK_IDENT      shift, and go to state 20
    TOK_INTCON     shift, and go to state 21
    TOK_CHARCON    shift, and go to state 22
    TOK_STRINGCON  shift, and go to state 23
    TOK_NEW        shift, and go to state 24
    '('            shift, and go to state 25
    '{'            shift, and go to state 26
    '}'            shift, and go to state 64
    ';'            shift, and go to state 27
    '+'            shift, and go to state 28
    '-'            shift, and go to state 29

    type       go to state 65
    plaintype  go to state 32
    block      go to state 34
    optstmt    go to state 35
    statement  go to state 66
    vardecl    go to state 37
    while      go to state 38
    ifelse     go to state 39
    return     go to state 40
    expr       go to state 41
    allocator  go to state 42
    call       go to state 43
    callexpr   go to state 44
    variable   go to state 45
    constant   go to state 46


State 27

   34 block: ';' .

    $default  reduce using rule 34 (block)


State 28

   66 expr: '+' . expr

    TOK_NULLPTR    shift, and go to state 15
    TOK_ALLOC      shift, and go to state 17
    TOK_NOT        shift, and go to state 19
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 21
    TOK_CHARCON    shift, and go to state 22
    TOK_STRINGCON  shift, and go to state 23
    TOK_NEW        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 28
    '-'            shift, and go to state 29

    expr       go to state 67
    allocator  go to state 42
    call       go to state 43
    callexpr   go to state 44
    variable   go to state 45
    constant   go to state 46


State 29

   67 expr: '-' . expr

    TOK_NULLPTR    shift, and go to state 15
    TOK_ALLOC      shift, and go to state 17
    TOK_NOT        shift, and go to state 19
    TOK_IDENT      shift, and go to state 51
    TOK_INTCON     shift, and go to state 21
    TOK_CHARCON    shift, and go to state 22
    TOK_STRINGCON  shift, and go to state 23
    TOK_NEW        shift, and go to state 24
    '('            shift, and go to state 25
    '+'            shift, and go to state 28
    '-'            shift, and go to state 29

    expr       go to state 68
    allocator  go to state 42
    call       go to state 43
    callexpr   go to state 44
    variable   go to state 45
    constant   go to state 46


State 30

    2 program: program structdef .

    $default  reduce using rule 2 (program)


State 31

   24 function: type . TOK_IDENT '(' funcident ')' block
   25         | type . '[' ']' TOK_IDENT '(' funcident ')' block
   43 vardecl: type . TOK_IDENT ';'
   44        | type . TOK_IDENT '=' expr ';'
   45        | type . '[' ']' TOK_IDENT '=' expr ';'

    TOK_IDENT  shift, and go to state 69
    '['        shift, and go to state 70


State 32

   13 type: plaintype .

    $default  reduce using rule 13 (type)


State 33

    3 program: program function .

    $default  reduce using rule 3 (program)


State 34

   38 statement: block .

    $default  reduce using rule 38 (statement)


State 35

   31 block: optstmt . '}'
   32      | optstmt . '}' ';'
   35 optstmt: optstmt . statement

    TOK_VOID       shift, and go to state 5
    TOK_INT        shift, and go to state 6
    TOK_STRING     shift, and go to state 7
    TOK_BOOL       shift, and go to state 8
    TOK_REF        shift, and go to state 9
    TOK_CHAR       shift, and go to state 10
    TOK_IF         shift, and go to state 11
    TOK_WHILE      shift, and go to state 12
    TOK_RETURN     shift, and go to state 13
    TOK_NULLPTR    shift, and go to state 15
    TOK_ARRAY      shift, and go to state 16
    TOK_ALLOC      shift, and go to state 17
    TOK_PTR        shift, and go to state 18
    TOK_NOT        shift, and go to state 19
    TOK_IDENT      shift, and go to state 20
    TOK_INTCON     shift, and go to state 21
    TOK_CHARCON    shift, and go to state 22
    TOK_STRINGCON  shift, and go to state 23
    TOK_NEW        shift, and go to state 24
    '('            shift, and go to state 25
    '{'            shift, and go to state 26
    '}'            shift, and go to state 71
    ';'            shift, and go to state 27
    '+'            shift, and go to state 28
    '-'            shift, and go to state 29

    type       go to state 65
    plaintype  go to state 32
    block      go to state 34
    optstmt    go to state 35
    statement  go to state 72
    vardecl    go to state 37
    while      go to state 38
    ifelse     go to state 39
    return     go to state 40
    expr       go to state 41
    allocator  go to state 42
    call       go to state 43
    callexpr   go to state 44
    variable   go to state 45
    constant   go to state 46


State 36

    4 program: program statement .

    $default  reduce using rule 4 (program)


State 37

   37 statement: vardecl .

    $default  reduce using rule 37 (statement)


State 38

   39 statement: while .

    $default  reduce using rule 39 (statement)


State 39

   40 statement: ifelse .

    $default  reduce using rule 40 (statement)


State 40

   41 statement: return .

    $default  reduce using rule 41 (statement)


State 41

   42 statement: expr . ';'
   53 expr: expr . '=' expr
   54     | expr . '+' expr
   55     | expr . '-' expr
   56     | expr . '*' expr
   57     | expr . '/' expr
   58     | expr . '^' expr
   59     | expr . '%' expr
   60     | expr . TOK_GT expr
   61     | expr . TOK_GE expr
   62     | expr . TOK_LT expr
   63     | expr . TOK_LE expr
   64     | expr . TOK_EQ expr
   65     | expr . TOK_NE expr
   83 variable: expr . '[' expr ']'
   84         | expr . TOK_ARROW TOK_IDENT
